--- a/application.yaml
+++ b/application.yaml
@@ -1,1 +1,14 @@
-
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
+    
+microservice:
+  incident-service:
+    endpoints:
+      endpoint:
+        uri: http://incident-service/incident/test
