--- a/application.yaml
+++ b/application.yaml
@@ -4,12 +4,16 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://host.docker.internal:8761/eureka/
-#       defaultZone: http://localhost:8761/eureka/
+  #       defaultZone: http://localhost:8761/eureka/
   instance:
-    hostname: localhost
-    
+    hostname: host.docker.internal
+
 microservice:
   incident-service:
     endpoints:
       endpoint:
         uri: http://incident-service/incident/test
+  authentication-service:
+    endpoints:
+      endpoint:
+        uri: http://authentication-service/auth/test
