--- a/application.yaml
+++ b/application.yaml
@@ -3,10 +3,10 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://host.docker.internal:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
 #       defaultZone: http://localhost:8761/eureka/
   instance:
-    hostname: host.docker.internal
+    hostname: discovery-service
 
 microservice:
   incident-service:
