--- a/application.yaml
+++ b/application.yaml
@@ -12,8 +12,8 @@ microservice:
   incident-service:
     endpoints:
       endpoint:
-        uri: http://incident-service/incident/test
+        uri: http://incident-service/**
   authentication-service:
     endpoints:
       endpoint:
-        uri: http://authentication-service/auth/test
+        uri: http://authentication-service/**
