--- a/application.yaml
+++ b/application.yaml
@@ -8,12 +8,12 @@ eureka:
   instance:
     hostname: discovery-service
 
-microservice:
-  incident-service:
-    endpoints:
-      endpoint:
-        uri: http://incident-service/**
-  authentication-service:
-    endpoints:
-      endpoint:
-        uri: http://authentication-service/**
+# microservice:
+#   incident-service:
+#     endpoints:
+#       endpoint:
+#         uri: http://incident-service/**
+#   authentication-service:
+#     endpoints:
+#       endpoint:
+#         uri: http://authentication-service/**
