--- a/application.yaml
+++ b/application.yaml
@@ -3,10 +3,9 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      # defaultZone: http://discovery-service:8761/eureka/
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
   instance:
-    hostname: localhost
+    hostname: discovery-service
 
 # microservice:
 #   incident-service:
