--- a/application.yaml
+++ b/application.yaml
@@ -5,10 +5,10 @@ eureka:
     service-url:
       defaultZone: http://discovery-service-0.discovery-service:8761/eureka
   instance:
-    hostname: discovery-service-0.discovery-service
+    hostname: localhost
 
 microservice:
   notification-service:
     endpoints:
       endpoint:
-        uri: http://notification-service:8084/ws-message
+        uri: http://notification-service/ws-message
