--- a/application.yaml
+++ b/application.yaml
@@ -5,7 +5,7 @@ eureka:
     service-url:
       defaultZone: http://discovery-service-0.discovery-service:8761/eureka
   instance:
-    hostname: localhost
+    hostname: host.docker.internal
 
 microservice:
   notification-service:
