--- a/application.yaml
+++ b/application.yaml
@@ -4,6 +4,7 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://discovery-service-0.discovery-service:8761/eureka
+      defaultZone: http://localhost:8761/eureka
 
 microservice:
   notification-service:
