--- a/application.yaml
+++ b/application.yaml
@@ -7,21 +7,13 @@ eureka:
       # defaultZone: http://localhost:8761/eureka
   instance:
     hostname: host.minikube.internal
-
+    
 microservice:
-  notification-service:
+  incident-service:
     endpoints:
       endpoint:
-        uri: http://notification-service/ws-message
-
-
-
-# microservice:
-#   incident-service:
-#     endpoints:
-#       endpoint:
-#         uri: http://incident-service/incident/test
-#   authentication-service:
-#     endpoints:
-#       endpoint:
-#         uri: http://authentication-service/auth/test
+        uri: http://incident-service/incident/test
+  authentication-service:
+    endpoints:
+      endpoint:
+        uri: http://authentication-service/auth/test
