--- a/application.yaml
+++ b/application.yaml
@@ -5,8 +5,8 @@ eureka:
     service-url:
       defaultZone: http://discovery-service-0.discovery-service:8761/eureka
       # defaultZone: http://localhost:8761/eureka
-  instance:
-    hostname: host.minikube.internal
+  # instance:
+  #   hostname: host.minikube.internal
     
 microservice:
   incident-service:
