--- a/application.yaml
+++ b/application.yaml
@@ -1,12 +1,12 @@
-# eureka:
-#   client:
-#     register-with-eureka: true
-#     fetch-registry: true
-#     service-url:
-#       defaultZone: http://discovery-service-0.discovery-service:8761/eureka
-#       # defaultZone: http://localhost:8761/eureka
-#   # instance:
-#   #   hostname: host.minikube.internal
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    # service-url:
+    #   defaultZone: http://discovery-service-0.discovery-service:8761/eureka
+    #   # defaultZone: http://localhost:8761/eureka
+  instance:
+    hostname: host.minikube.internal
     
 microservice:
   incident-service:
@@ -17,3 +17,14 @@ microservice:
     endpoints:
       endpoint:
         uri: http://authentication-service/auth/test
+
+
+# eureka:
+#   client:
+#     register-with-eureka: false
+#     fetch-registry: false
+#     service-url:
+#       defaultZone: http://discovery-service-0.discovery-service:8761/eureka
+#       # defaultZone: http://localhost:8761/eureka
+#   # instance:
+#   #   hostname: host.minikube.internal
