--- a/application.yaml
+++ b/application.yaml
@@ -2,11 +2,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    # service-url:
-    #   defaultZone: http://discovery-service-0.discovery-service:8761/eureka
-    #   # defaultZone: http://localhost:8761/eureka
-  instance:
-    hostname: host.minikube.internal
+  # instance:
+  #   hostname: host.minikube.internal
     
 microservice:
   incident-service:
