--- a/application.yaml
+++ b/application.yaml
@@ -2,8 +2,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-  # instance:
-  #   hostname: host.minikube.internal
+  instance:
+    hostname: host.docker.internal
     
 microservice:
   incident-service:
