--- a/application.yaml
+++ b/application.yaml
@@ -14,6 +14,10 @@ microservice:
     endpoints:
       endpoint:
         uri: http://authentication-service/auth/test
+  notification-service:
+    endpoints:
+      endpoint:
+        uri: http://notification-service/ws-message
 
 
 # eureka:
