--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,17 @@
+# eureka:
+#   client:
+#     register-with-eureka: false
+#     fetch-registry: false
+#   instance:
+#     hostname: host.docker.internal
+
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://host.docker.internal:8761/eureka
+      # defaultZone: http://localhost:8761/eureka
   instance:
     hostname: host.docker.internal
     
