--- a/application.yaml
+++ b/application.yaml
@@ -10,7 +10,8 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://host.docker.internal:8761/eureka
+      defaultZone: http://discovery-service-0.discovery-service:8761/eureka
+      # defaultZone: http://host.docker.internal:8761/eureka
       # defaultZone: http://localhost:8761/eureka
   instance:
     hostname: host.docker.internal
