--- a/application.yaml
+++ b/application.yaml
@@ -13,8 +13,8 @@ eureka:
       defaultZone: http://discovery-service-0.discovery-service:8761/eureka
       # defaultZone: http://host.docker.internal:8761/eureka
       # defaultZone: http://localhost:8761/eureka
-  # instance:
-  #   hostname: host.docker.internal
+  instance:
+    hostname: host.docker.internal
     
 microservice:
   incident-service:
