--- a/application.yaml
+++ b/application.yaml
@@ -10,11 +10,12 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://discovery-service-0.discovery-service:8761/eureka
-      # defaultZone: http://host.docker.internal:8761/eureka
-      # defaultZone: http://localhost:8761/eureka
+      # defaultZone: http://discovery-service-0.discovery-service:8761/eureka
+      # # defaultZone: http://host.docker.internal:8761/eureka
+      defaultZone: http://localhost:8761/eureka
   instance:
-    hostname: host.docker.internal
+    # hostname: host.docker.internal
+    hostname: localhost
     
 microservice:
   incident-service:
