--- a/application.yaml
+++ b/application.yaml
@@ -11,11 +11,11 @@ eureka:
     fetch-registry: true
     service-url:
       # defaultZone: http://discovery-service-0.discovery-service:8761/eureka
-      # # defaultZone: http://host.docker.internal:8761/eureka
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://host.docker.internal:8761/eureka
+      # defaultZone: http://localhost:8761/eureka
   instance:
-    # hostname: host.docker.internal
-    hostname: localhost
+    hostname: host.docker.internal
+    # hostname: localhost
     
 microservice:
   incident-service:
